<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieDetailActiviry">
    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:text="@string/trailers"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_detail_trailers_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textStyle="bold"
        android:text="@string/reviews"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_detail_reviews_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:textSize="18sp"
            android:text="@string/language"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/movie_detail_item_language"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:textSize="18sp"
            android:text="@string/release_data"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/movie_detail_item_release_date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:textSize="18sp"
            android:text="@string/popularity"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/movie_detail_item_popularity"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:textSize="18sp"
            android:text="@string/average_rating"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/movie_detail_item_average_rating"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:text="@string/vote_count"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/movie_detail_item_vote_count"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/overview"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/movie_detail_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>